Add push notifications, form improvements, basic tour for onboarding and add payments plugin.

--- a/app/batches/batch-detail-package/batch-detail-package.component.html
+++ b/app/batches/batch-detail-package/batch-detail-package.component.html
@@ -30,6 +30,8 @@
             </TKPropertyGroup>
           </RadDataForm>
 
+          <Button class="btn btn-primary btn-active fa" id="button" text="&#xf02a; Scan Tag" (tap)="onScanTap()"></Button>
+
         </StackLayout>
     </ScrollView>
     <ActivityIndicator [busy]="isCreating"></ActivityIndicator>
