--- a/app/harvests/harvest-list.component.html
+++ b/app/harvests/harvest-list.component.html
@@ -36,7 +36,7 @@ it shouldn't have any other siblings other than the <ActionBar> component.
 
 
       <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
-      <ListView [items]="harvests" (itemTap)="onHarvestItemTap($event)">
+      <RadListView [items]="harvests" (itemTap)="onHarvestItemTap($event)" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
           <ng-template let-item="item">
               <StackLayout [class.odd]="odd" [class.even]="even">
                 <GridLayout columns="auto, *" rows="auto, auto">
@@ -45,7 +45,7 @@ it shouldn't have any other siblings other than the <ActionBar> component.
                 </GridLayout>
               </StackLayout>
           </ng-template>
-      </ListView>
+      </RadListView>
       <GridLayout *ngIf="!harvests.length" class="page page-content" tkMainContent>
           <Label class="page-icon fa" text="&#xf18c;"></Label>
           <Label class="page-placeholder" text="No active harvests."></Label>
