--- a/app/harvests/removewaste/removewaste.component.html
+++ b/app/harvests/removewaste/removewaste.component.html
@@ -15,6 +15,9 @@
             <TKEntityProperty tkDataFormProperty name="UnitOfWeight"  [valuesProvider]="unitsOfWeight">
               <TKPropertyEditor tkEntityPropertyEditor type="Picker"></TKPropertyEditor>
             </TKEntityProperty>
+            <TKEntityProperty tkDataFormProperty name="WasteWeight">
+              <TKPropertyEditor tkEntityPropertyEditor type="Decimal"></TKPropertyEditor>
+            </TKEntityProperty>
             <TKEntityProperty tkDataFormProperty name="ActualDate">
               <TKPropertyEditor tkEntityPropertyEditor type="DatePicker"></TKPropertyEditor>
             </TKEntityProperty>
