--- a/app/items/item-detail-edit/item-detail-edit.component.html
+++ b/app/items/item-detail-edit/item-detail-edit.component.html
@@ -17,7 +17,7 @@
             <TKEntityProperty tkDataFormProperty name="Strain" displayName="Strain" [valuesProvider]="strains">
                 <TKPropertyEditor tkEntityPropertyEditor type="Picker"></TKPropertyEditor>
             </TKEntityProperty>
-            <TKEntityProperty tkDataFormProperty name="ItemCategory" displayName="Item Category" [valuesProvider]="itemCategories">
+            <TKEntityProperty tkDataFormProperty name="ItemCategory" displayName="Product Category" [valuesProvider]="itemCategories">
                 <TKPropertyEditor tkEntityPropertyEditor type="Picker"></TKPropertyEditor>
             </TKEntityProperty>
             <TKEntityProperty tkDataFormProperty name="UnitOfMeasure" displayName="Unit Of Measure" [valuesProvider]="unitsOfMeasure">
