--- a/app/items/item-detail/item-detail.component.html
+++ b/app/items/item-detail/item-detail.component.html
@@ -24,12 +24,15 @@
         <TKPropertyGroup tkDataFormGroups collapsible="true" collapsed="true" name="Product Details" hidden="false">
             <TKEntityProperty tkPropertyGroupProperties name="Name"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="ProductCategoryName"></TKEntityProperty>
-            <TKEntityProperty tkPropertyGroupProperties name="ProductCategoryType"></TKEntityProperty>
-            <TKEntityProperty tkPropertyGroupProperties name="QuantityType"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="UnitOfMeasureName"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="UnitThcContent"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="UnitThcContentUnitOfMeasureName"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="UnitVolume"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="UnitVolumeUnitOfMeasureName"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="UnitWeight"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="UnitWeightUnitOfMeasureName"></TKEntityProperty>
         </TKPropertyGroup>
         <TKPropertyGroup tkDataFormGroups collapsible="true" collapsed="true" name="Strain Information" hidden="false">
-            <TKEntityProperty tkPropertyGroupProperties name="StrainId"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="StrainName"></TKEntityProperty>
         </TKPropertyGroup>
 
@@ -37,8 +40,11 @@
             <TKEntityProperty tkPropertyGroupProperties name="Id"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="DefaultLabTestingState"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="ItemCategory"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="ProductCategoryType"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="QuantityType"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="UnitOfMeasure"></TKEntityProperty>
             <TKEntityProperty tkPropertyGroupProperties name="Strain"></TKEntityProperty>
+            <TKEntityProperty tkPropertyGroupProperties name="StrainId"></TKEntityProperty>
         </TKPropertyGroup>
       </RadDataForm>
 		</StackLayout>
