--- a/app/packages/package-list.component.html
+++ b/app/packages/package-list.component.html
@@ -33,7 +33,7 @@ it shouldn't have any other siblings other than the <ActionBar> component.
     -->
     <GridLayout rows="0, *" class="page page-content" tkMainContent>
       <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
-      <ListView row="1" [items]="packages" (itemTap)="onPackageItemTap($event)">
+      <RadListView row="1" [items]="packages" (itemTap)="onPackageItemTap($event)" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)" selectionBehavior="LongPress" multipleSelection="true" (itemSelected)="onItemSelected($event, fabView, actionItem1, actionItem2)" (itemDeselected)="onItemDeselected($event, fabView, actionItem1, actionItem2, actionItem3)">
           <ng-template let-item="item">
               <StackLayout [class.odd]="odd" [class.even]="even">
                 <GridLayout columns="auto, *" rows="auto, auto">
@@ -42,14 +42,13 @@ it shouldn't have any other siblings other than the <ActionBar> component.
                 </GridLayout>
               </StackLayout>
           </ng-template>
-      </ListView>
+      </RadListView>
       <GridLayout row="1" *ngIf="!packages.length" class="page page-content" tkMainContent>
-          <Label class="page-icon fa" text="&#xf466;"></Label>
+          <Label class="page-icon fa-s" text="&#xf466;"></Label>
           <Label class="page-placeholder" text="No active packages."></Label>
       </GridLayout>
-      <FAB #actionItem3 row="1" (tap)="actionItem3Tap()" icon="~/images/plant-leaf.png" rippleColor="#f1f1f1" class="fab-button" style="height: 60; width: 60; margin: 15; background-color: #db7d34; horizontal-align: right; vertical-align: bottom; "></FAB>
       <FAB #actionItem2 row="1" (tap)="actionItem2Tap()" icon="~/images/beaker.png" rippleColor="#f1f1f1" class="fab-button" style="height: 60; width: 60; margin: 15; background-color: #db7d34; horizontal-align: right; vertical-align: bottom; "></FAB>
       <FAB #actionItem1 row="1" (tap)="actionItem1Tap()" icon="~/images/box.png" rippleColor="#f1f1f1" class="fab-button" style="height: 60; width: 60; margin: 15; background-color: #db7d34; horizontal-align: right; vertical-align: bottom; "></FAB>
-      <FAB row="1" (tap)="fabTap(actionItem1, actionItem2, actionItem3)" icon="res://icon" rippleColor="#db7d34" class="fab-button" style="height: 60; width: 60; margin: 15; background-color: #ffffff; horizontal-align: right; vertical-align: bottom; "></FAB>
+      <FAB #fabView row="1" (tap)="fabTap(actionItem1, actionItem2)" icon="res://icon" rippleColor="#db7d34" class="fab-button" style="height: 60; width: 60; margin: 15; background-color: #ffffff; horizontal-align: right; vertical-align: bottom; "></FAB>
     </GridLayout>
 </RadSideDrawer>
