--- a/app/rooms/room-list.component.html
+++ b/app/rooms/room-list.component.html
@@ -48,7 +48,7 @@ it shouldn't have any other siblings other than the <ActionBar> component.
       </RadListView>
       <GridLayout *ngIf="!rooms.length" class="page page-content" tkMainContent>
           <Label class="page-icon fa" text="&#xf248;"></Label>
-          <Label class="page-placeholder" text="No defined rooms."></Label>
+          <Label class="page-placeholder" text="Add a room for each lighted grow or drying area."></Label>
       </GridLayout>
     </GridLayout>
 </RadSideDrawer>
