--- a/app/settings/settings.component.html
+++ b/app/settings/settings.component.html
@@ -38,7 +38,7 @@ it shouldn't have any other siblings other than the <ActionBar> component.
             <Label col="1" row="0" class="m-t-20 m-b-20 m-r-10" text="Account Settings"></Label>
 
             <Label col="0" row="1" class="m-t-20 m-b-20 m-l-20 fa fa-small" text="&#xf09d;"></Label>
-            <Label col="1" row="1" class="m-t-20 m-b-20 m-r-10" text="Payment Settings"></Label>
+            <Label col="1" row="1" class="m-t-20 m-b-20 m-r-10" text="Payment Settings" [nsRouterLink]="['/payment']"></Label>
 
             <Label col="0" row="2" class="m-t-20 m-b-20 m-l-20 fa fa-small" text="&#xf059;"></Label>
             <Label col="1" row="2" class="m-t-20 m-b-20 m-r-10" text="Help Center"></Label>
