--- a/app/strains/create/create.component.html
+++ b/app/strains/create/create.component.html
@@ -18,6 +18,12 @@
             <TKEntityProperty tkDataFormProperty name="CbdLevel">
                 <TKPropertyEditor tkEntityPropertyEditor type="Decimal"></TKPropertyEditor>
             </TKEntityProperty>
+            <TKEntityProperty tkDataFormProperty name="IndicaPercentage">
+                <TKPropertyEditor tkEntityPropertyEditor type="Decimal"></TKPropertyEditor>
+            </TKEntityProperty>
+            <TKEntityProperty tkDataFormProperty name="SativaPercentage">
+                <TKPropertyEditor tkEntityPropertyEditor type="Decimal"></TKPropertyEditor>
+            </TKEntityProperty>
 
             <TKPropertyGroup tkDataFormGroups collapsible="true" name="Hidden" hidden="true">
               <TKEntityProperty tkPropertyGroupProperties name="Id"></TKEntityProperty>
